# T2-SO-2S2025

./: Cargo.toml  README.md  README_MEJORADO.md  REPORT.md  TECHNICAL_DOCS.md  Video.md  fcfs_results.csv  informe.md  rr_results.csv
examples/: README.md  basic_usage.rs
src/: estaciones.rs  funciones.rs  lib.rs  main.rs  main_fijo.rs  main_individual.rs  metrics.rs  product.rs  scheduler.rs  simulation.rs  station.rs
test/: main_fijo.rs  main_individual.rs  mutex_demo.rs
tests/: integration_tests.rs
