[package]
name = "assembly-line-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Estudiante SO"]
description = "Simulador de línea de ensamblaje con algoritmos de scheduling"
license = "MIT"

[[bin]]
name = "assembly-line-simulator"
path = "src/main.rs"

[lib]
name = "assembly_line_simulator"
path = "src/lib.rs"

[dependencies]
